# boise-state-agentcore-public-stack

./: .gitignore  CHANGELOG.md  CLAUDE.MD  CONTRIBUTING.md  README.md  RELEASE_NOTES.md
backend/: Dockerfile.rag-ingestion  pyproject.toml
backend/scripts/: seed_bootstrap_data.py
backend/src/: .env.example
backend/src/agents/builtin_tools/: code_interpreter_diagram_tool.py
backend/src/agents/builtin_tools/spreadsheet_analysis/: analyze_tool.py  list_spreadsheets_tool.py
backend/src/agents/local_tools/: url_fetcher.py
backend/src/agents/main_agent/: base_agent.py  skill_agent.py
backend/src/agents/main_agent/core/: agent_factory.py  bedrock_count_tokens.py  model_config.py  system_prompt_builder.py
backend/src/agents/main_agent/integrations/: external_mcp_client.py  gateway_mcp_client.py  mcp_apps.py  mcp_tool_folding.py
backend/src/agents/main_agent/multimodal/: prompt_builder.py
backend/src/agents/main_agent/session/: persistence.py  turn_based_session_manager.py
backend/src/agents/main_agent/skills/: __init__.py  mcp_binding.py  skill_registry.py  skill_tools.py
backend/src/agents/main_agent/streaming/: stream_coordinator.py  stream_processor.py
backend/src/agents/main_agent/tools/: gateway_integration.py  tool_filter.py
backend/src/apis/app_api/: main.py
backend/src/apis/app_api/admin/: models.py  routes.py
backend/src/apis/app_api/assistants/: routes.py
backend/src/apis/app_api/chat/: routes.py
backend/src/apis/app_api/connectors/: routes.py
backend/src/apis/app_api/documents/: models.py  routes.py
backend/src/apis/app_api/file_sources/: adapter.py  models.py  registry.py  routes.py  service.py
backend/src/apis/app_api/files/: routes.py
backend/src/apis/app_api/memory/: routes.py
backend/src/apis/app_api/sessions/: routes.py
backend/src/apis/app_api/skills/: __init__.py  routes.py  service.py
backend/src/apis/app_api/system/: routes.py
backend/src/apis/app_api/system_prompts/: __init__.py  routes.py
backend/src/apis/app_api/tools/: discovery.py  routes.py  service.py
backend/src/apis/app_api/user_settings/: routes.py
backend/src/apis/app_api/users/: models.py  routes.py
backend/src/apis/app_api/web_sources/: __init__.py  crawl_repository.py  crawler.py  models.py  (+2 more)
backend/src/apis/inference_api/: main.py
backend/src/apis/shared/: errors.py  feature_flags.py
backend/tests/: test_seed_system_admin_jwt.py
backend/tests/agents/builtin_tools/: test_code_interpreter_diagram_tool.py
backend/tests/agents/local_tools/: test_url_fetcher.py
backend/tests/agents/main_agent/: test_base_agent_external_registration.py
backend/tests/apis/app_api/: test_chat_settings_routes.py  test_connectors_routes.py  test_file_source_adapters_admin.py  test_file_source_routes.py  test_file_sources.py  test_file_sources_google_drive.py  test_skills_feature_flag.py  test_user_skills_routes.py
backend/tests/apis/inference_api/: test_chat_service.py  test_system_prompt_resolver.py
backend/tests/rbac/: conftest.py  test_app_role_skills.py  test_role_mutation_constraints.py  test_role_version_invalidation.py
backend/tests/routes/: test_admin_bedrock_models.py  test_admin_lows.py  test_agent_mode_policy.py  test_delete_endpoints.py  test_document_import.py  test_documents.py  test_inference.py  test_memory_delete_ownership.py  test_sessions.py  test_users_sync.py
backend/tests/security/: __init__.py  test_error_handler.py  test_ownership.py  test_python_ast_policy.py  test_url_validator.py
backend/tests/shared/: conftest.py  test_assistants.py  test_assistants_extended.py  test_auth_providers.py  test_auth_providers_extended.py  test_auth_providers_ssrf.py  test_bedrock_bearer_token.py  test_files_cursor_validation.py  test_gateway_identity.py  test_gateway_lambda_grant.py  test_gateway_target_service.py  test_managed_models.py  test_mcp_apps_partial_json.py  test_mcp_apps_ui_resource_store.py  test_platform_settings.py  test_rbac_repository.py  test_scoped_tool_ids.py  test_sessions_messages.py  test_skills_access.py  test_skills_freshness.py  test_skills_models.py  test_skills_preferences.py  test_skills_repository.py  test_skills_resource_store.py  test_system_prompts.py  test_system_prompts_routes.py  test_tools_gateway_config.py  test_user_settings_agent_mode.py
scripts/backup-data/: backup.py  pyproject.toml
scripts/restore-data/: README.md  pyproject.toml  restore.py  test_restore.py
(+472 files in other folders)
