[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentcore-stack"
version = "1.0.0"
requires-python = ">=3.10"
description = "Multi-agent conversational AI system with AWS Bedrock AgentCore"
readme = "README.md"
license = {text = "MIT"}

# Core dependencies shared across both APIs
dependencies = [
    # FastAPI and web framework
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",

    # AWS and cloud services
    "boto3==1.43.9",

    # Utilities
    "python-dotenv==1.2.2",
    "httpx==0.28.1",
    "aiofiles==25.1.0",

    # Authentication (for shared auth module)
    "pyjwt[crypto]==2.13.0",

    # OAuth provider management
    "authlib==1.7.1",
    "cachetools==6.2.4",

    # Security: pin starlette to fix Dependabot alert (transitive via fastapi)
    "starlette==1.3.1",

    # Security: pin transitive deps to fix Dependabot alerts
    "pillow==12.2.0",
    "cryptography==48.0.1",
    "python-multipart==0.0.31",
    "aiohttp==3.14.1",
    "urllib3==2.7.0",
    "idna==3.15",

    # PDF page-1 rasterization for attachment thumbnails (Apache 2.0 / BSD).
    # Bundles PDFium (no system poppler/ghostscript needed).
    "pypdfium2==4.30.0",

    # Web-source crawler: link extraction + main-content -> markdown.
    "beautifulsoup4==4.13.5",
    "trafilatura==2.0.0",
]

[project.optional-dependencies]
# AgentCore-specific dependencies (for inference_api)
agentcore = [
    "strands-agents==1.40.0",
    "strands-agents-tools==0.5.2",

    "aws-opentelemetry-distro==0.17.0",
    "bedrock-agentcore==1.9.1",
    # Multi-provider LLM support
    "openai==2.32.0",  # For OpenAI models
    "google-genai==1.73.1",  # For Google Gemini models
]

# Voice/BidiAgent dependencies (Nova Sonic speech-to-speech)
bidi = [
    "strands-agents[bidi]==1.40.0",
]

# Document ingestion pipeline dependencies (for Lambda deployment)
# NOTE: For document ingestion dependencies, see:
#   backend/src/apis/app_api/documents/ingestion/requirements.txt
# This is the single source of truth for the Lambda deployment.
# For local development: uv pip install -r backend/src/apis/app_api/documents/ingestion/requirements.txt

# Development dependencies
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.1.0",
    "hypothesis==6.152.3",
    "moto[dynamodb,cognitoidp]==5.1.22",
    "black==26.3.1",
    "ruff==0.15.12",
    "mypy==1.20.2",
    "types-aiofiles==25.1.0.20260409",
    "tiktoken==0.12.0",
    "numpy==2.2.6",
]

# All dependencies (convenience)
all = [
    "agentcore-stack[agentcore,bidi,dev]",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["agents*", "apis*"]

[tool.black]
line-length = 150
target-version = ['py310']
include = '\.pyi?$'

[tool.ruff]
line-length = 150
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
# pythonpath is relative to the directory where pytest is run (backend/)
pythonpath = ["src"]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
